--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #UX dsign
-UX-Design.xd
+#UX-Design.xd
 
 # dependencies
 /node_modules
